# bash-splitter

./: .gitattributes  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  justfile
.config/: nextest.toml
.github/workflows/: CLAUDE.md  ci.yml  docs.yml  release.yml
docs/: index.md  package-lock.json
docs/.vitepress/: config.mts
docs/guide/: index.md
docs/reference/: coverage.md  redirects.md
src/: extended_test.rs  lib.rs  main.rs  params.rs  pipeline.rs  redirect.rs  simple.rs  types.rs  walk.rs  word.rs
tests/: bash_syntax_coverage.rs  cli.rs  depraved.rs  edge_cases.rs  horrible.rs  parentage.rs  redirects_loops_vars.rs  snapshots.rs  split.rs
tests/common/: mod.rs
tests/fixtures/: horrible.sh
tests/snapshots/: complex_pipeline_with_subs.flat.json  complex_pipeline_with_subs.nested.json  complex_pipeline_with_subs.sh  loop_with_nested_substitution.flat.json  loop_with_nested_substitution.nested.json  loop_with_nested_substitution.sh  loop_with_redirect_and_vars.flat.json  loop_with_redirect_and_vars.sh  multiple_substitutions.flat.json  multiple_substitutions.nested.json  multiple_substitutions.sh  nested_substitutions.flat.json  nested_substitutions.nested.json  nested_substitutions.sh  orphan_substitution.flat.json  orphan_substitution.sh  pipeline.flat.json  pipeline.sh  sequence.flat.json  sequence.sh  simple_command.flat.json  single_substitution.flat.json  single_substitution.nested.json  single_substitution.sh
