[package]
name = "bash-splitter"
version = "0.1.0"
edition = "2024"
description = "simple bash command splitter using brush, useful in auto-deny execution pipelines"
license = "MIT"
repository = "https://github.com/webspam/bash-splitter"
readme = "README.md"
keywords = ["bash", "shell", "parser", "command", "cli"]
categories = ["command-line-utilities", "parsing"]

[dependencies]
brush-parser = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
semicolon_if_nothing_returned = "allow"
